src/Test/Fixtures/Good/BitQubit/inferredQubitDeclaration.lf
let singleQubit = qalloc(1);
