src/Test/Fixtures/Bad/BitQubit/missingTypeAfterColonInQubitDeclaration.lf
let q : = qalloc(1);